fix: modal overflow in mobile devices

--- a/src/routes/Home/components/Info.scss
+++ b/src/routes/Home/components/Info.scss
@@ -11,13 +11,19 @@
   background-color: rgba($color: #000000, $alpha: 0.5);
 
   box-shadow: 0px 0px 5px rgba($color: #000000, $alpha: 0.5);
-  &__article {
+  &__container {
     max-height: 70%;
     width: 70%;
     padding: 20px;
     background: #e2e2e2;
     border-radius: 1rem;
     box-shadow: 0px 0px 5px rgba($color: #000000, $alpha: 0.5);
+    .description {
+      margin-top: 10px;
+
+      overflow-y: scroll;
+      max-height: 400px;
+    }
   }
   &__title {
     margin: 0px;
